--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "@angular/platform-browser": "^19.1.0",
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/router": "^19.1.0",
+    "@stomp/stompjs": "^7.1.1",
     "docx-preview": "^0.3.5",
     "ngx-doc-viewer": "^15.0.1",
     "ngx-toastr": "^19.0.0",
     "normalize.css": "^8.0.1",
     "rxjs": "~7.8.0",
     "slick-carousel": "^1.8.1",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
@@ -32,6 +35,8 @@
     "@angular/cli": "^19.1.8",
     "@angular/compiler-cli": "^19.1.0",
     "@types/jasmine": "~5.1.0",
+    "@types/sockjs-client": "^1.5.4",
+    "@types/stompjs": "^2.3.9",
     "jasmine-core": "~5.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
