--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^19.1.0",
     "@angular/platform-browser-dynamic": "^19.1.0",
     "@angular/router": "^19.1.0",
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@stomp/stompjs": "^7.1.1",
     "docx-preview": "^0.3.5",
     "ngx-doc-viewer": "^15.0.1",
