--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^19.1.0",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@stomp/stompjs": "^7.1.1",
+    "chart.js": "^4.4.9",
     "docx-preview": "^0.3.5",
     "ngx-doc-viewer": "^15.0.1",
     "ngx-toastr": "^19.0.0",
