--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
     "tslib": "^2.3.0",
+    "untitled": "file:",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
